--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
    ],
    "dependencies": {
        "socket.io": "~> 0.9.0 ",
-       "express": "~> 2.5.0"
+       "express": "~> 2.5.0",
+       "jade": ">= 0"
    }
 }
