--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
    "dependencies": {
        "socket.io": "~> 0.9.0 ",
        "express": "~> 2.5.0",
-       "jade": ">= 0"
+       "ejs": ">= 0"
    }
 }
