--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
        "pclet",
        "skd"
    ],
+   "engines": {
+    "node": "0.6.x",
+    "npm":  "1.0.x" },
    "maintainers": [
        {
            "name": "Chris Rhoden",
